--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/styles.css">
   <title>Frontend Mentor | Crowdfunding product page</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -23,28 +27,28 @@
   </section>
   <main>
     <section class="second">
-      <img src="images/logo-mastercraft.svg" alt="Mastercraft logo">
+      <img src="images/logo-mastercraft.svg" alt="Mastercraft logo" class="logo">
       <h1>Mastercraft Bamboo Monitor Riser</h1>
       <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
       <div class="button-container1">
         <button>Back this project</button>
         <div>
-          <button><img src="/images/icon-bookmark.svg" alt=""></button>
-          <p>Bookmark</p>
+          <img src="/images/icon-bookmark.svg" alt="" class="bookmark">
+          <button>Bookmark</button>
         </div>
       </div>
     </section>
-    <section clas="third">
+    <section class="third">
       <div>
-        <div>
+        <div class="one">
           <p>$89,914</p>
           <p>of $100,000 backed</p>
         </div>
-        <div>
+        <div class="two">
           <p>5,007</p>
           <p>total backers</p>
         </div>
-        <div>
+        <div class="three">
           <p>56</p>
           <p>days left</p>
         </div>
@@ -55,7 +59,7 @@
       <h2>About this project</h2>
       <p>The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay focused on the task at hand.</p>
       <p>Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB sticks to be stored under the stand.</p>
-      <div>
+      <div class="body">
         <div class="head">
           <h3>Bamboo Stand</h3>
           <p>Pledge $25 or more</p>
@@ -66,7 +70,7 @@
           <button>Select Reward</button>
         </div>
       </div>
-      <div>
+      <div class="body">
         <div class="head">
           <h3>Black Edition Stand</h3>
           <p>Pledge $75 or more</p>
@@ -77,7 +81,7 @@
           <button>Select Reward</button>
         </div>
       </div>
-      <div>
+      <div class="body inactive">
         <div class="head">
           <h3>Mahogany Special Edition</h3>
           <p>Pledge $200 or more</p>
@@ -89,19 +93,34 @@
         </div>
       </div>
     </section>
-    <section class="selection-modal">
-      <img src="images/icon-close-menu.svg">
+  </main>
+  <section class="selection-modal">
+    <section>
+      <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg"><g fill="#7a7a7a" fill-rule="evenodd"><path d="M2.404.782l11.314 11.314-2.122 2.122L.282 2.904z"/><path d="M.282 12.096L11.596.782l2.122 2.122L2.404 14.218z"/></g></svg>
       <h2>Back this project</h2>
       <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
-      <div>
+      <div class="no-pledge">
+        <input type="radio" name="" id="">
+        <div>
+          <h2>Pledge with no reward</h2>
+          <p>Choose to support us without a reward if you simply believe in our project. As a backer, you will be signed up to receive product updates via email.</p>
+        </div>
+      </div>
+      <div class="pledge-contain">
         <div>
           <input type="radio" name="" id="">
           <div>
-            <h2>Pledge with no reward</h2>
-            <p>Choose to support us without a reward if you simply believe in our project. As a backer, you will be signed up to receive product updates via email.</p>
+            <div>
+              <div>
+                <h2>Bamboo Stand</h2>
+                <h3>Pledge $25 or more</h3>
+              </div>
+              <p>101 <span>left</span></p>
+            </div>
+            <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</p>
           </div>
         </div>
-        <div>
+        <div class="pledge">
           <p>Enter your pledge</p>
           <div>
             <button>$25</button>
@@ -109,39 +128,26 @@
           </div>
         </div>
       </div>
-      <div>
+      <div class="pledge-contain">
         <div>
           <input type="radio" name="" id="">
           <div>
             <div>
               <div>
-                <h2>Bamboo Stand</h2>
-                <h2>Pledge $25 or more</h2>
+                <h2>Black Edition Stand</h2>
+                <h3>Pledge $75 or more</h3>
               </div>
-              <p>101 <span>left</span></p>
+              <p>64 <span>left</span></p>
             </div>
-            <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</p>
+            <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</p>
           </div>
         </div>
-        <div>
+        <div class="pledge">
           <p>Enter your pledge</p>
           <div>
             <button>$75</button>
             <button>Continue</button>
           </div>
-        </div>
-      </div>
-      <div>
-        <input type="radio" name="" id="">
-        <div>
-          <div>
-            <div>
-              <h2>Black Edition Stand</h2>
-              <h2>Pledge $75 or more</h2>
-            </div>
-            <p>64 <span>left</span></p>
-          </div>
-          <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</p>
         </div>
       </div>
       <div class="inactive">
@@ -151,14 +157,14 @@
             <div>
               <div>
                 <h2>Mahogany Special Edition</h2>
-                <h2>Pledge $200 or more</h2>
+                <h3>Pledge $200 or more</h3>
               </div>
               <p>0 <span>left</span></p>
             </div>
             <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</p>
           </div>
         </div>
-        <div>
+        <div class="pledge">
           <p>Enter your pledge</p>
           <div>
             <button>$200</button>
@@ -167,12 +173,16 @@
         </div>
       </div>
     </section>
-    <section class="success-modal">
+  </section>
+  <section class="success-modal" id="successModal">
+    <section>
       <img src="images/icon-check.svg">
       <h3>Thanks for your support!</h3>
       <p>Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our campaign is completed.</p>
-      <button>Got it!</button>
+      <button id="closeSuccessModal">Got it!</button>
     </section>
-  </main>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
