--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
             <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</p>
           </div>
         </div>
-        <div class="pledge">
+        <article class="pledge">
           <p>Enter your pledge</p>
           <div>
-            <button>$25</button>
-            <button>Continue</button>
+            <button class="input-btn">$ <input type="text"> </button>
+            <button class="continue-btn">Continue</button>
           </div>
-        </div>
+        </article>
       </div>
       <div class="pledge-contain">
         <div>
@@ -145,8 +145,8 @@
         <div class="pledge">
           <p>Enter your pledge</p>
           <div>
-            <button>$75</button>
-            <button>Continue</button>
+            <button class="input-btn">$ <input type="text"> </button>
+            <button class="continue-btn">Continue</button>
           </div>
         </div>
       </div>
@@ -167,8 +167,8 @@
         <div class="pledge">
           <p>Enter your pledge</p>
           <div>
-            <button>$200</button>
-            <button>Continue</button>
+            <button class="input-btn">$ <input type="text"> </button>
+            <button class="continue-btn">Continue</button>
           </div>
         </div>
       </div>
