--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
   <section class="first">
     <nav>
       <img src="images/logo.svg" alt="logo">
-      <ul>
-        <li>About</li>
-        <li>Discover</li>
-        <li>Get Started</li>
-      </ul>
+      <img src="images/icon-hamburger.svg" class="hamburger">
+      <div>
+        <img src="images/icon-close-menu.svg">
+        <ul>
+          <li>About</li>
+          <li>Discover</li>
+          <li>Get Started</li>
+        </ul>
+      </div>
     </nav>
   </section>
   <main>
